--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en"><head>
 <meta charset="UTF-8">
-<meta name="description" content="Crack Password | LoLi Team">
+<meta name="description" content="Hacked Password | aktraw">
 <meta property="og:image" content="https://pbs.twimg.com/profile_images/882554149501411329/Paknbh2i_400x400.jpg">
 <meta name="Crack Password |aktraw">
 <title>|Crack Password|</title>
@@ -22,7 +22,7 @@
                     title_last = "*~*"
                 };
             } else {
-                title_last = "Crack Password"
+                title_last = "Hacked Password"
             }
         }
 
@@ -75,9 +75,9 @@
 <p>Chào bạn nếu bạn đang cố gắn truy cập vào một website hay cái đéo gì đó và bạn đéo biết mật khẩu hay bị Firewall nó chặn lại,
 <br>bạn sẽ phải cần đến phương pháp brute-force này,...</p>
 <br>--&gt;Đừng quên theo dõi Oppa Eopi đáng yêu của chúng ta tại
-<a href="https://www.facebook.com/Thuong.EoPi" target="_blank" title="Click để vào trang cá nhân của EoPi">Facebook</a>
+<a href="https://www.facebook.com/Thuong.EoPi" target="_blank" title="Click để vào trang cá nhân của aktraw">Facebook</a>
 nhé<p></p>
-<p class="hidden">Nhấn đại một cái nút nào đó (nhấn liên tục nút space luôn đi) để nó ra mật khẩu từ từ nhé thằng bệnh<span class="blink">_</span></p>
+<p class="hidden">Nhấn đại một cái nút nào đó (nhấn liên tục nút space luôn đi) để nó ra mật khẩu từ từ nhé <span class="blink">_</span></p>
 </div>
 <div class="password hidden">5vbz4b32grw</div>
 <div class="button start">BẮT ĐẦU HACK!</div>
