--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html lang="en"><head>
 <meta charset="UTF-8">
-<meta name="description" content="Đéo Có File Đâu| LoLi Team">
+<title>|----♥404 Page♥----|</title>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<meta name="description" content="Về Nhà Ngủ Đi | LoLi Team">
 <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/5/5b/LoLi_Team_Logo_2.png">
-<meta name="Đéo Có File Đâu | LoLi Team">
-<link rel="icon" href="https://cdn0.iconfinder.com/data/icons/thin-files-documents/57/thin-065_paper_document_file_error_unavailable_delete-512.png" sizes="17x17">
+<meta name="Về Nhà Ngủ Đi | LoLi Team">
+<link rel="icon" href="http://www.minjung20.org/Static/close_button.png" sizes="17x17">
 <meta name="keywords" content="LoLi Team EoPi">
-<title>|--♥--404 - Not File--♥--|</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/style.css">
 <script language="javascript">
             title_tmp1 = document.title
@@ -25,7 +27,7 @@
                         title_last = "*~*"
                     };
                 } else {
-                    title_last = "404 - Not File"
+                    title_last = "404 Page"
                 }
             }
 
@@ -71,45 +73,22 @@
         </script>
 </head>
 <body>
-<div class="error">
-<div class="wrap">
-<div class="404">
-<pre><code>
-	 <span class="green">&lt;!</span><span>DOCTYPE html</span><span class="green">&gt;</span>
-<span class="orange">&lt;html&gt;</span>
-	<span class="blue">&lt;title&gt;</span>
-		<span class="green">LoLi Sec Team</span>
-	<span class="blue">&lt;/title&gt;</span>
-    <span class="orange">&lt;style&gt;</span>
-   * {
-		        <span class="green">everything</span>:<span class="blue">LoLiTeam</span>;
-}
-     <span class="orange">&lt;/style&gt;</span>
- <span class="orange">&lt;body&gt;</span> 
-              ERROR 404!
-				FILE NOT FOUND!
-				<span class="comment">&lt;!--Tệp tin mà bạn đang cố tải, 
-					có thể đéo có ở đây đâu.--&gt;
-		</span>
- <span class="orange"></span> 
-			  
+<div id="particles-js">
 
-
-</code></pre></div><code>
-<br>
-<span class="info">
-<br>
-<br>
-<br>
-
-<span class="orange">&nbsp;&lt;/body&gt;</span>
-
-<br>
-      <span class="orange">&lt;/html&gt;</span>
-    </span></code>
+<canvas class="particles-js-canvas-el" width="1365" height="937" style="width: 100%; height: 100%;"></canvas></div>
+<div class="container">
+<div class="text">
+<h1 style="text-shadow: -3px 0 0 rgba(255,0,0,.7),
+		3px 0 0 rgba(0,255,255,.7);">
+<font style="background: url('https://loliteam.net/src/chopnhay.gif') 
+repeat scroll 0% 2% transparent; color:#F8E8E8;text-shadow: 0 0 0.7em #DB1230,0 0 0.5em #DB1230">
+LOLI SEC TEAM</font>
+</h1>
+<h2 style="text-shadow: -3px 0 0 rgba(255,0,0,.7),
+		3px 0 0 rgba(0,255,255,.7);">Go <a href="https://loliteam.net">hom<span>e</span></a>&nbsp; You're Drunk </h2>
 </div>
 </div>
-
-<iframe src="https://www.nhaccuatui.com/mh/background/NWoIssjaPw" width="0" height="0" frameborder="0" allowfullscreen=""></iframe>
+<script src="js/index.js"></script>
+<iframe src="https://www.nhaccuatui.com/mh/background/X3asFdF2ZobI" width="0" height="0" frameborder="0" allowfullscreen=""></iframe>
 
 </body></html>
