--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta charset="UTF-8">
-<title>|----♥404 Page♥----|</title>
+<title>404 Page</title>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<meta name="description" content="Về Nhà Ngủ Đi | LoLi Team">
+<meta name='description' content='Về Nhà Ngủ Đi | LoLi Team'>
 <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/5/5b/LoLi_Team_Logo_2.png">
-<meta name="Về Nhà Ngủ Đi | LoLi Team">
-<link rel="icon" href="http://www.minjung20.org/Static/close_button.png" sizes="17x17">
-<meta name="keywords" content="LoLi Team EoPi">
+<meta name='Về Nhà Ngủ Đi | LoLi Team'>
+<link rel='icon' href='http://www.minjung20.org/Static/close_button.png' sizes='17x17'>
+<meta name="keywords" content="LoLi Team EoPi" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/style.css">
-<script language="javascript">
+<script language=javascript>
             title_tmp1 = document.title
             if (title_tmp1.indexOf(">>") != -1) {
                 title_tmp2 = title_tmp1.split(">>");
@@ -74,8 +75,9 @@
 </head>
 <body>
 <div id="particles-js">
-
-<canvas class="particles-js-canvas-el" width="1365" height="937" style="width: 100%; height: 100%;"></canvas></div>
+<canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;">
+</canvas>
+</div>
 <div class="container">
 <div class="text">
 <h1 style="text-shadow: -3px 0 0 rgba(255,0,0,.7),
@@ -89,6 +91,6 @@ LOLI SEC TEAM</font>
 </div>
 </div>
 <script src="js/index.js"></script>
-<iframe src="https://www.nhaccuatui.com/mh/background/X3asFdF2ZobI" width="0" height="0" frameborder="0" allowfullscreen=""></iframe>
-
-</body></html>
+<iframe src="https://www.nhaccuatui.com/mh/background/X3asFdF2ZobI" width="0" height="0" frameborder="0" allowfullscreen></iframe>
+</body>
+</html>
