--- a/index.html
+++ b/index.html
@@ -1,100 +1,10 @@
-<html><head><title>hacked by Hmei7</title>
-<script type="text/javascript">
-
-var snowmax=35
-var snowcolor=new Array("#AAAACC","#DDDDFF","#CCCCDD","#F3F3F3","#F0FFFF")
-var snowtype=new Array("Arial Black","Arial Narrow","Times","Comic Sans MS")
-var snowletter="*"
-var sinkspeed=0.6
-var snowmaxsize=22
-var snowminsize=8
-var snowingzone=1
-
-// Do not edit below this line
-var snow=new Array()
-var marginbottom
-var marginright
-var timer
-var i_snow=0
-var x_mv=new Array();
-var crds=new Array();
-var lftrght=new Array();
-var browserinfos=navigator.userAgent 
-var ie5=document.all&&document.getElementById&&!browserinfos.match(/Opera/)
-var ns6=document.getElementById&&!document.all
-var opera=browserinfos.match(/Opera/)  
-var browserok=ie5||ns6||opera
-
-function randommaker(range) {		
-	rand=Math.floor(range*Math.random())
-    return rand
-}
-
-function initsnow() {
-	if (ie5 || opera) {
-		marginbottom = document.body.clientHeight
-		marginright = document.body.clientWidth
-	}
-	else if (ns6) {
-		marginbottom = window.innerHeight
-		marginright = window.innerWidth
-	}
-	var snowsizerange=snowmaxsize-snowminsize
-	for (i=0;i<=snowmax;i++) {
-		crds[i] = 0;                      
-    	lftrght[i] = Math.random()*15;         
-    	x_mv[i] = 0.03 + Math.random()/10;
-		snow[i]=document.getElementById("s"+i)
-		snow[i].style.fontFamily=snowtype[randommaker(snowtype.length)]
-		snow[i].size=randommaker(snowsizerange)+snowminsize
-		snow[i].style.fontSize=snow[i].size
-		snow[i].style.color=snowcolor[randommaker(snowcolor.length)]
-		snow[i].sink=sinkspeed*snow[i].size/5
-		if (snowingzone==1) {snow[i].posx=randommaker(marginright-snow[i].size)}
-		if (snowingzone==2) {snow[i].posx=randommaker(marginright/2-snow[i].size)}
-		if (snowingzone==3) {snow[i].posx=randommaker(marginright/2-snow[i].size)+marginright/4}
-		if (snowingzone==4) {snow[i].posx=randommaker(marginright/2-snow[i].size)+marginright/2}
-		snow[i].posy=randommaker(2*marginbottom-marginbottom-2*snow[i].size)
-		snow[i].style.left=snow[i].posx
-		snow[i].style.top=snow[i].posy
-	}
-	movesnow()
-}
-
-function movesnow() {
-	for (i=0;i<=snowmax;i++) {
-		crds[i] += x_mv[i];
-		snow[i].posy+=snow[i].sink
-		snow[i].style.left=snow[i].posx+lftrght[i]*Math.sin(crds[i]);
-		snow[i].style.top=snow[i].posy
-		
-		if (snow[i].posy>=marginbottom-2*snow[i].size || parseInt(snow[i].style.left)>(marginright-3*lftrght[i])){
-			if (snowingzone==1) {snow[i].posx=randommaker(marginright-snow[i].size)}
-			if (snowingzone==2) {snow[i].posx=randommaker(marginright/2-snow[i].size)}
-			if (snowingzone==3) {snow[i].posx=randommaker(marginright/2-snow[i].size)+marginright/4}
-			if (snowingzone==4) {snow[i].posx=randommaker(marginright/2-snow[i].size)+marginright/2}
-			snow[i].posy=0
-		}
-	}
-	var timer=setTimeout("movesnow()",50)
-}
-
-for (i=0;i<=snowmax;i++) {
-	document.write("<span id='s"+i+"' style='position:absolute;top:-"+snowmaxsize+"'>"+snowletter+"</span>")
-}
-if (browserok) {
-	window.onload=initsnow
-}
-</script></head><body><span id="s0" style="position: absolute; top: 102px; font-family: &quot;Arial Black&quot;; font-size: 17px; color: rgb(221, 221, 255); left: 1157.3px;">*</span><span id="s1" style="position: absolute; top: 295.2px; font-family: &quot;Arial Black&quot;; font-size: 11px; color: rgb(221, 221, 255); left: 1786.97px;">*</span><span id="s2" style="position: absolute; top: 395.8px; font-family: &quot;Arial Narrow&quot;; font-size: 9px; color: rgb(243, 243, 243); left: 65.7875px;">*</span><span id="s3" style="position: absolute; top: 35.28px; font-family: &quot;Arial Narrow&quot;; font-size: 21px; color: rgb(240, 255, 255); left: 418.557px;">*</span><span id="s4" style="position: absolute; top: 792.6px; font-family: &quot;Arial Black&quot;; font-size: 13px; color: rgb(170, 170, 204); left: 756.542px;">*</span><span id="s5" style="position: absolute; top: 308.8px; font-family: &quot;Comic Sans MS&quot;; font-size: 9px; color: rgb(170, 170, 204); left: 1310.35px;">*</span><span id="s6" style="position: absolute; top: 900.2px; font-family: Times; font-size: 21px; color: rgb(204, 204, 221); left: 61.6603px;">*</span><span id="s7" style="position: absolute; top: 326.6px; font-family: &quot;Arial Black&quot;; font-size: 8px; color: rgb(170, 170, 204); left: 366.748px;">*</span><span id="s8" style="position: absolute; top: 457.2px; font-family: &quot;Comic Sans MS&quot;; font-size: 11px; color: rgb(243, 243, 243); left: 1345.35px;">*</span><span id="s9" style="position: absolute; top: 397.44px; font-family: &quot;Comic Sans MS&quot;; font-size: 18px; color: rgb(204, 204, 221); left: 702.96px;">*</span><span id="s10" style="position: absolute; top: 530.2px; font-family: Times; font-size: 11px; color: rgb(204, 204, 221); left: 835.938px;">*</span><span id="s11" style="position: absolute; top: 507.8px; font-family: Times; font-size: 14px; color: rgb(243, 243, 243); left: 1602.86px;">*</span><span id="s12" style="position: absolute; top: 761.4px; font-family: &quot;Arial Narrow&quot;; font-size: 12px; color: rgb(240, 255, 255); left: 479.394px;">*</span><span id="s13" style="position: absolute; top: 681.6px; font-family: &quot;Comic Sans MS&quot;; font-size: 18px; color: rgb(221, 221, 255); left: 236.548px;">*</span><span id="s14" style="position: absolute; top: 65.52px; font-family: &quot;Arial Narrow&quot;; font-size: 13px; color: rgb(243, 243, 243); left: 1140.66px;">*</span><span id="s15" style="position: absolute; top: 131.04px; font-family: &quot;Arial Narrow&quot;; font-size: 21px; color: rgb(240, 255, 255); left: 713.14px;">*</span><span id="s16" style="position: absolute; top: 680px; font-family: Times; font-size: 20px; color: rgb(221, 221, 255); left: 348.134px;">*</span><span id="s17" style="position: absolute; top: 862px; font-family: &quot;Comic Sans MS&quot;; font-size: 15px; color: rgb(243, 243, 243); left: 1699.76px;">*</span><span id="s18" style="position: absolute; top: 293.4px; font-family: &quot;Arial Narrow&quot;; font-size: 15px; color: rgb(204, 204, 221); left: 1858.74px;">*</span><span id="s19" style="position: absolute; top: 679px; font-family: &quot;Comic Sans MS&quot;; font-size: 15px; color: rgb(204, 204, 221); left: 580.448px;">*</span><span id="s20" style="position: absolute; top: 550.8px; font-family: &quot;Arial Narrow&quot;; font-size: 19px; color: rgb(221, 221, 255); left: 619.183px;">*</span><span id="s21" style="position: absolute; top: 188.16px; font-family: &quot;Arial Narrow&quot;; font-size: 8px; color: rgb(243, 243, 243); left: 1624.68px;">*</span><span id="s22" style="position: absolute; top: 307.44px; font-family: &quot;Arial Narrow&quot;; font-size: 21px; color: rgb(240, 255, 255); left: 1533.09px;">*</span><span id="s23" style="position: absolute; top: 184.8px; font-family: &quot;Arial Narrow&quot;; font-size: 20px; color: rgb(221, 221, 255); left: 1721.36px;">*</span><span id="s24" style="position: absolute; top: 656.6px; font-family: &quot;Arial Black&quot;; font-size: 8px; color: rgb(240, 255, 255); left: 1579.76px;">*</span><span id="s25" style="position: absolute; top: 734.8px; font-family: &quot;Arial Black&quot;; font-size: 9px; color: rgb(240, 255, 255); left: 1435.34px;">*</span><span id="s26" style="position: absolute; top: 290.2px; font-family: &quot;Arial Black&quot;; font-size: 11px; color: rgb(204, 204, 221); left: 1847.46px;">*</span><span id="s27" style="position: absolute; top: 95.76px; font-family: Times; font-size: 21px; color: rgb(170, 170, 204); left: 1461.99px;">*</span><span id="s28" style="position: absolute; top: 180px; font-family: &quot;Comic Sans MS&quot;; font-size: 12px; color: rgb(221, 221, 255); left: 485.547px;">*</span><span id="s29" style="position: absolute; top: 616.6px; font-family: Times; font-size: 18px; color: rgb(170, 170, 204); left: 1434.86px;">*</span><span id="s30" style="position: absolute; top: 716.2px; font-family: &quot;Arial Narrow&quot;; font-size: 21px; color: rgb(221, 221, 255); left: 329.009px;">*</span><span id="s31" style="position: absolute; top: 283.92px; font-family: &quot;Arial Narrow&quot;; font-size: 13px; color: rgb(243, 243, 243); left: 253.922px;">*</span><span id="s32" style="position: absolute; top: 579.4px; font-family: &quot;Comic Sans MS&quot;; font-size: 17px; color: rgb(243, 243, 243); left: 1635.01px;">*</span><span id="s33" style="position: absolute; top: 723.4px; font-family: &quot;Arial Narrow&quot;; font-size: 17px; color: rgb(170, 170, 204); left: 1150.53px;">*</span><span id="s34" style="position: absolute; top: 533.8px; font-family: &quot;Arial Narrow&quot;; font-size: 9px; color: rgb(221, 221, 255); left: 1167.46px;">*</span><span id="s35" style="position: absolute; top: 272.6px; font-family: &quot;Comic Sans MS&quot;; font-size: 8px; color: rgb(204, 204, 221); left: 1011.31px;">*</span>
-
-<style type="text/css">
-	body {background-color:#000000;}
-	#q {font: 40px impact;color:#ffffff;}
-</style>
-
-<table width="100%" height="100%">
-	<tbody><tr><td align="center">
-		<div id="q">hi i am aktraw</div>
-	</td>
-</tr></tbody></table>
-</body></html>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Backgorund Color</title>
+   </head>
+   <body style="background-color:grey;">
+      <h1>Products</h1>
+	   <p>Hệ thống được phát triển bởi AKTRAW</p>
+   </body>
+</html>
