--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    </head>
    <body style="background-color:grey;">
       <h1>Products</h1>
-	   <p>Hệ thống được phát triển bởi AKTRAW</p>
+	   <h3>{ HỆ THỐNG ĐƯỢC TẠO BỞI AKTRAW
+		   }
    </body>
 </html>
