--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Backgorund Color</title>
+      <title>Hệ thống được tạo bởi AKTRAW</title>
    </head>
    <body style="background-color:grey;">
-      <h1>Products</h1>
-	   <h3>{ HỆ THỐNG ĐƯỢC TẠO BỞI AKTRAW
-		   }
+     <p>
+	     Hệ thống được tạo bởi <a href="https://www.facebook.com/akiet206/"AKTRAW</a>
+	   </p>
    </body>
 </html>
