--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
    <head>
       <title>Hệ thống được tạo bởi AKTRAW</title>
    </head>
-   <body style="background-color:grey;">
-     <span>
-	     Hệ thống được tạo bởi
-	   </span>
-	   <span>
-		    <a href="https://www.facebook.com/akiet206/"AKTRAW</a>
-		   </spam>
+   <body background='https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fobsuabmobsiab79%2F&psig=AOvVaw2i27BX6bLrcAYchT34NXjO&ust=1630062064314000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPC7r8nEzvICFQAAAAAdAAAAABAK">
+    
    </body>
 </html>
