--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Hệ thống được tạo bởi AKTRAW</title>
+      <title>HTML Backgorund Color</title>
    </head>
-   <body background='https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fobsuabmobsiab79%2F&psig=AOvVaw2i27BX6bLrcAYchT34NXjO&ust=1630062064314000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPC7r8nEzvICFQAAAAAdAAAAABAK">
-    
+   <body>
+      <img src="https://i.pinimg.com/originals/33/19/cf/3319cf658da623ccf1a84bbdb6172145.gif" alt="ILOVEYOU" title="ILOVEYOU"
    </body>
 </html>
