--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
    <head>
       <title>HTML Backgorund Color</title>
    </head>
-   <body>
-      <img src="https://i.pinimg.com/originals/33/19/cf/3319cf658da623ccf1a84bbdb6172145.gif" alt="ILOVEYOU" title="ILOVEYOU"
+   <body style="background-color:grey;">
+      <h1>404 ERROR</h1>
+      <p>We will try to update more information in the future 2021</p>
+      <p class="copyright"> 2021 <a href="Blog by Le Nguyen Anh Kiet /">aktraw</a>.</p>
    </body>
 </html>
