--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
    </head>
    <body style="background-color:grey;">
       <h1>404 ERROR</h1>
-      <p>We will try to update more information in the future 2021</p>
-      <p class="copyright"> 2021 <a href="Blog by Le Nguyen Anh Kiet /">aktraw</a>.</p>
+      <p>We will try to update more information in the future 2021</p><a href="https://www.facebook.com/akiet206/ /">AKTRAW</p>
    </body>
 </html>
