--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><title>hacked by aktraw</title>
+<html><head><title>created by aktraw</title>
 <script type="text/javascript">
 
 var snowmax=35
@@ -94,7 +94,7 @@ if (browserok) {
 
 <table width="100%" height="100%">
 	<tbody><tr><td align="center">
-		<div id="q">hacked by aktraw</div>
+		<div id="q">created by aktraw</div>
 	</td>
 </tr></tbody></table>
 </body></html>
