--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
         <meta charset="UTF-8">
         <title>404 ERROR</title>
     </head>
-<body style="background-color: grey;">
-    <h1>404 ERROR</h1>
-	<script>
-   ctx.fillStyle = '#ffffff';
-	ctx.font = '48px sans-serif';
-	ctx.fillText('Hệ thống được tạo bởi AKTRAW', 500, 140)'
-	</script>
+<body style="background-color: grey;">    
+	<h2 style="text-shadow: -3px 0 0 rgba(255,0,0,.7),
+		3px 0 0 rgba(0,255,255,.7);">Go <a href="https://www.facebook.com/akiet206/">hom<span>e</span></a>&nbsp; You're Drunk </h2>
 </body>
 </html>
