--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <title>404 ERROR</title>
     </head>
-<body style="background-color: grey;">    
+<body style="background-color: grey;">  
+	<font style="background: url('https://loliteam.net/src/chopnhay.gif') 
+repeat scroll 0% 2% transparent; color:#F8E8E8;text-shadow: 0 0 0.7em #DB1230,0 0 0.5em #DB1230">
+HELLO WORD MY AKTRAW</font>
 	<h2 style="text-shadow: -3px 0 0 rgba(255,0,0,.7),
 		3px 0 0 rgba(0,255,255,.7);">Go <a href="https://www.facebook.com/akiet206/">hom<span>e</span></a>&nbsp; You're Drunk </h2>
 </body>
