--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>404 ERROR</title>
     </head>
+	<link rel='icon' href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYK2SsnUoO_A7jv-XUNvjr1UTszPEVgBr8HQ&usqp=CAU' sizes='17x17'>
+
 <body style="background-color: grey;">  
 	<font style="background: url('https://loliteam.net/src/chopnhay.gif') 
 repeat scroll 0% 2% transparent; color:#F8E8E8;text-shadow: 0 0 0.7em #DB1230,0 0 0.5em #DB1230">
