--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
         <meta charset="UTF-8">
         <title>404 ERROR</title>
     </head>
-	<link rel='icon' href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYK2SsnUoO_A7jv-XUNvjr1UTszPEVgBr8HQ&usqp=CAU' sizes='17x17'>
+	<link rel='icon' href='https://www.pngkey.com/png/detail/221-2212168_planeta-website-logo-png-green.png' sizes='17x17'>
 
 <body style="background-color: grey;">  
-	<font style="background: url('https://loliteam.net/src/chopnhay.gif') 
+	<div id="particles-js">
+<canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;">
+</canvas>
+</div>
+<div class="container">
+<div class="text">
+<h1 style="text-shadow: -3px 0 0 rgba(255,0,0,.7),
+		3px 0 0 rgba(0,255,255,.7);">
+<font style="background: url('https://loliteam.net/src/chopnhay.gif') 
 repeat scroll 0% 2% transparent; color:#F8E8E8;text-shadow: 0 0 0.7em #DB1230,0 0 0.5em #DB1230">
-HELLO WORD MY AKTRAW</font>
-	<h2 style="text-shadow: -3px 0 0 rgba(255,0,0,.7),
-		3px 0 0 rgba(0,255,255,.7);">Go <a href="https://www.facebook.com/akiet206/">hom<span>e</span></a>&nbsp; You're Drunk </h2>
+LOLI SEC TEAM</font>
+</h1>
+<h2 style="text-shadow: -3px 0 0 rgba(255,0,0,.7),
+		3px 0 0 rgba(0,255,255,.7);">Go <a href="https://loliteam.net">hom<span>e</span></a>&nbsp; You're Drunk </h2>
+</div>
+</div>
+<script src="js/index.js"></script>
+<iframe src="https://www.nhaccuatui.com/mh/background/X3asFdF2ZobI" width="0" height="0" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
