--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 </head>
 <body>
 <div id="particles-js">
-<canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;">
+<canvas class="particles-js-canvas-el" width="1517" height="1077"
+	style="width: 100%; height: 100%;">
 </canvas>
 </div>
 <div class="container">
