--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@ Hi i am aktraw
 <font face="courier new"><font size="4" color=#00ff00>
 <center>
 
-<a target=blank href="index_.php">enter</a>
+<a target=blank href="https://www.facebook.com/akiet206/">enter</a>
  / 
 <a target=blank href="index_.html">enter</a>
  / 
-<a target=blank href="index_.htm">enter</a>
+<a target=blank href="https://www.google.com/">enter</a>
 
 </center>
 </font>
